vlib/v/checker/tests/assign_expr_type_err_i.out
vlib/v/checker/tests/assign_expr_type_err_i.vv:3:9: error: cannot assign `string` to `foo` of type `f64`
    1 | fn main() {
    2 |     mut foo := 1.5
    3 |     foo += 'hello'
      |            ~~~~~~~
    4 | }
